Changed every Service and Controller to use DTO